force-app/main/default/objects/maps__LiveIoTDevice__c/maps__LiveIoTDevice__c.object-meta.xml
<CustomObject>
    <label>Maps Live IoT Device</label>
    <nameField>
        <label>Maps Live IoT Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live IoT Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>