force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>maps__DeviceId__c</fullName>
    <label>Device ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>