force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__LastPositionAddress__c.field-meta.xml
<CustomField>
    <fullName>maps__LastPositionAddress__c</fullName>
    <description>The physical address the device last reported from</description>
    <inlineHelpText>The physical address the device last reported from</inlineHelpText>
    <label>Last Position Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>