force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__LastPositionEventRaw__c.field-meta.xml
<CustomField>
    <fullName>maps__LastPositionEventRaw__c</fullName>
    <label>Last Position Event (Raw)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>