force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__LastPositionRaw__c.field-meta.xml
<CustomField>
    <fullName>maps__LastPositionRaw__c</fullName>
    <description>This is the raw response for the last position request</description>
    <label>Last Position Raw</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>