force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__LastPositionUpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__LastPositionUpdateDateTime__c</fullName>
    <inlineHelpText>Timestamp of this last position record updated by batch.</inlineHelpText>
    <label>Batch Date/Time of Last Position</label>
    <type>DateTime</type>
</CustomField>