force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__LastReportedTimeZone__c.field-meta.xml
<CustomField>
    <fullName>maps__LastReportedTimeZone__c</fullName>
    <label>Last Reported Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>