force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__LatestDailySummary__c.field-meta.xml
<CustomField>
    <fullName>maps__LatestDailySummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Daily Summary</label>
    <referenceTo>maps__LiveAssetDailySummary__c</referenceTo>
    <relationshipName>LiveIoTDevices</relationshipName>
    <type>Lookup</type>
</CustomField>