force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__Vendor__c.field-meta.xml
<CustomField>
    <fullName>maps__Vendor__c</fullName>
    <label>Device Vendor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CalAmp</fullName>
            </value>
            <value>
                <fullName>Geometris</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>MapAnything</fullName>
                <label>Maps Live Tracking: Mobile</label>
            </value>
            <value>
                <fullName>Geotab</fullName>
                <default>true</default>
                <label>Geotab</label>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>