force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__VIN__c.field-meta.xml
<CustomField>
    <fullName>maps__VIN__c</fullName>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>