force-app/main/default/objects/maps__LiveIoTDevice__c/fields/maps__VINLastUpdated__c.field-meta.xml
<CustomField>
    <fullName>maps__VINLastUpdated__c</fullName>
    <label>VIN Last Updated</label>
    <type>DateTime</type>
</CustomField>